--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OL Messenger - Free & Open Source Office LAN Messenger</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
@@ -65,22 +65,27 @@
         </div>
     </section>
 
-    <section id="download">
+   <section id="download">
         <h2>Download</h2>
         <p>
             Get started with OL Messenger today! Download the latest release for your platform:
         </p>
         <ul>
-            <li><a href="assets/app/OfficeLANMessenger.exe">Stand Alone Executable File</a></li>
-            <li><a href="#">Windows Installer</a></li>
-            <li><a href="#">Linux Package</a></li>
-            <li><a href="#">macOS App</a></li>
-            <li><a href="#">Source Code (GitHub)</a></li>
+            <li>
+                <a href="assets/app/OLMessenger.exe" class="download-link" data-key="0">Stand Alone Executable File</a>
+            </li>
+            <li>
+                <a href="assets/app/LANMessenger_Installer.exe" class="download-link" data-key="1">Windows Installer</a>
+            </li>
         </ul>
         <div class="cta">
-            <a href="#">Download OL Messenger</a>
+            <a href="assets/app/OLMessenger.exe">Download OL Messenger</a>
+        </div>
+        <div class="total-downloads">
+            <strong>Total Downloads:</strong> <span id="total-download-count">0</span>
         </div>
     </section>
+
 
     <section id="contribute">
         <h2>Contribute</h2>
