desktop friendly text only

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><span class="feature-icon">🔒</span> <strong>Private & Secure:</strong> All messages stay within your local network.</li>
             <li><span class="feature-icon">💬</span> <strong>Instant Messaging:</strong> Real-time text chat between colleagues.</li>
             <li><span class="feature-icon">📂</span> <strong>File Sharing:</strong> Quickly share documents and files.</li>
-            <li><span class="feature-icon">🖥️</span> <strong>Group Chats:</strong> Create team or department channels.</li>
+            <li><span class="feature-icon">🖥️</span> <strong>Desktop Friendly:</strong> Desktop friendly which runs on all PCs.</li>
             <li><span class="feature-icon">🚀</span> <strong>Lightweight:</strong> Fast and resource-friendly, works on older hardware.</li>
             <li><span class="feature-icon">🛠️</span> <strong>Cross-Platform:</strong> Available for Windows, Linux, and macOS.</li>
             <li><span class="feature-icon">🔓</span> <strong>Open Source:</strong> Fully transparent and customizable.</li>
