download counter removed

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
         </p>
         <ul>
             <li>
-                <a href="assets/app/OLMessenger.exe" class="download-link" data-key="0">Stand Alone Executable File</a>
+                <a href="assets/app/OLMessenger.exe" class="download-link" data-key="0">Download | Stand Alone Executable File</a>
             </li>
             <li>
-                <a href="assets/app/LANMessenger_Installer.exe" class="download-link" data-key="1">Windows Installer</a>
+                <a href="assets/app/LANMessenger_Installer.exe" class="download-link" data-key="1">Download | Windows Installer</a>
             </li>
         </ul>
-        <div class="cta">
+        <!-- <div class="cta">
             <a href="assets/app/OLMessenger.exe">Download OL Messenger</a>
-        </div>
-        <div class="total-downloads">
+        </div> -->
+        <!-- <div class="total-downloads">
             <strong>Total Downloads:</strong> <span id="total-download-count">0</span>
-        </div>
+        </div> -->
     </section>
 
 
