--- a/index.html
+++ b/index.html
@@ -93,25 +93,26 @@
             OL Messenger is built by the community, for the community! You can contribute by:
         </p>
         <ul>
-            <li>Reporting issues and suggesting features</li>
-            <li>Submitting code or documentation improvements</li>
-            <li>Translating OL Messenger into your language</li>
-            <li>Spreading the word!</li>
+            <li>Instant and Real Time Messaging</li>
+            <li>Message History</li>
+            <li>File Sharing</li>
+            <li>Safe and Secure</li>
+            <li>No Internet Access Needed</li>
         </ul>
-        <p>
+        <!-- <p>
             Visit our <a href="#">GitHub repository</a> to get started.
-        </p>
+        </p> -->
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
         <p>
-            Have questions, feedback, or need support? Reach out to us at <a href="mailto:support@olmessenger.org">support@olmessenger.org</a> or join our <a href="#">community forum</a>.
+            Have questions, feedback, or need support? Reach out to us at <a href="mailto:dineshbishwakarma98@gmail.com">dineshbishwakarma98@gmail.com</a> .
         </p>
     </section>
 
     <footer>
-        &copy; 2025 OL Messenger. Free & Open Source. Made with ❤️ for teams everywhere.
+        &copy; 2025 OL Messenger. Free . Made with ❤️ for teams everywhere.
     </footer>
 
     <script src="script.js"></script>
