new version app

--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
             Get started with OL Messenger today! Download the latest release for your platform:
         </p>
         <ul>
+             <li>
+                <a href="assets/app/OLMessenger_Installer.exe" class="download-link" data-key="1">Download | Windows Installer</a>
+            </li>
             <li>
                 <a href="assets/app/OLMessenger.exe" class="download-link" data-key="0">Download | Stand Alone Executable File</a>
             </li>
-            <li>
-                <a href="assets/app/LANMessenger_Installer.exe" class="download-link" data-key="1">Download | Windows Installer</a>
-            </li>
+           
         </ul>
         <!-- <div class="cta">
             <a href="assets/app/OLMessenger.exe">Download OL Messenger</a>
@@ -99,9 +100,9 @@
             <li>Safe and Secure</li>
             <li>No Internet Access Needed</li>
         </ul>
-        <!-- <p>
-            Visit our <a href="#">GitHub repository</a> to get started.
-        </p> -->
+        <p>
+            Visit our <a href="mailto:dineshbishwakarma98@gmail.com">GitHub repository</a> available on demand.
+        </p>
     </section>
 
     <section id="contact">
